--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   background-color: black;
+  width: 100%;
+  justify-content: center;
 }
 body {
   font-family: 'Shrikhand', cursive;
