--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,13 @@
 *{
   box-sizing: border-box;
   color: white;
-
 }
 .container {
   display: flex;
   flex-direction: column;
   background-color: black;
   width: 100%;
-  justify-content: center;
+  align-items: space-between;
 }
 body {
   font-family: 'Shrikhand', cursive;
@@ -16,12 +15,6 @@ body {
   font-family: 'Saira Condensed', sans-serif;
   font-size: 30px;
   
-}
-
-.options-form {
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
 }
 
 .song-container {
@@ -55,8 +48,13 @@ form div {
   display: inline-block;
 }
 
+#select-form #random-song-button .category-select  {
+  background-color: black;
+  padding: 10px;
+}
+
 .button {
-  background-color: white; 
+  background-color: black; 
   border: none;
   padding: 15px 32px;
   text-align: center;
@@ -77,4 +75,8 @@ form div {
   width: 30%;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+#soundwave-wrapper {
+  width: 100%;
 }
