--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
 *{
   box-sizing: border-box;
   color: white;
+  text-align: center;
 }
 .container {
   display: flex;
@@ -13,8 +14,7 @@ body {
   font-family: 'Shrikhand', cursive;
   font-family: 'Josefin Sans', sans-serif;
   font-family: 'Saira Condensed', sans-serif;
-  font-size: 30px;
-  
+  font-size: 30px; 
 }
 
 .song-container {
@@ -33,9 +33,11 @@ a {
 }
 
 
-label {
+label, #random-song-button{
   display: block;
   font-family: 'Shrikhand', cursive;
+  font-size: 20px;
+  text-align: center;
 }
 
 nav a {
@@ -51,6 +53,7 @@ form div {
 #select-form #random-song-button .category-select  {
   background-color: black;
   padding: 10px;
+  align-self: center;
 }
 
 #landing-page-img{
@@ -83,4 +86,9 @@ form div {
 
 #soundwave-wrapper {
   width: 100%;
+}
+
+#dance-floor {
+  align-self: center;
+  margin: 10%;
 }
